--- a/StripeService/src/main/resources/templates/Response.html
+++ b/StripeService/src/main/resources/templates/Response.html
@@ -105,6 +105,7 @@
             .then((res)=>{
                 console.log(res.data)
                 if(res.data.statusCode === 201){
+                    showConfetti();
                     return swal("Success", "Payment successfull, Check your Mailbox!", "success");
 
                 }
@@ -121,8 +122,51 @@
 
     })
 
-</script>
+    function showConfetti(){
+        const count = 200,
+            defaults = {
+                origin: { y: 0.7 },
+            };
 
+        function fire(particleRatio, opts) {
+            confetti(
+                Object.assign({}, defaults, opts, {
+                    particleCount: Math.floor(count * particleRatio),
+                })
+            );
+        }
+
+        fire(0.25, {
+            spread: 26,
+            startVelocity: 55,
+        });
+
+        fire(0.2, {
+            spread: 60,
+        });
+
+        fire(0.35, {
+            spread: 100,
+            decay: 0.91,
+            scalar: 0.8,
+        });
+
+        fire(0.1, {
+            spread: 120,
+            startVelocity: 25,
+            decay: 0.92,
+            scalar: 1.2,
+        });
+
+        fire(0.1, {
+            spread: 120,
+            startVelocity: 45,
+        });
+    }
+
+</script>
+<!--Confetti JS.-->
+<script src="https://cdn.jsdelivr.net/npm/tsparticles-confetti@2.12.0/tsparticles.confetti.bundle.min.js"></script>
 
 </body>
 </html>
